# page_screenshot

./: MANIFEST.in  README.md  main.py  requirements.txt  setup.cfg  setup.py  url_list.txt
page_screenshot/: index.py  run_factory.py
page_screenshot/config/: setting.py  switch_360_chrome.txt
page_screenshot/model/: model.py
