[metadata]
license_file = LICENSE
name = page_screenshot
summary = a complete capture from a web page
description-file = README.md
author = xiaohong2019
author-email = 2229009854@qq.com
license = Apache License, Version 2.0

[files]
packages = page_screenshot

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[nosetests]
verbosity = 3
detailed-errors = 1
with-coverage = 1
nocapture = 1
cover-package = page_screenshot